--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -14,15 +14,15 @@
       <div>
         <input  type="text" name="login" [(ngModel)]="mobileNumber"  id="login_field" class="form-control input-block" tabindex="1" maxlength="7" autofocus="autofocus">
       </div>
-      <button type="submit" (click)="login()" name="commit" value="Log in" tabindex="3" class="btn btn-primary btn-block">
+      <button type="submit" (click)="sendLoginCode()" name="commit" value="Log in" tabindex="3" class="btn btn-primary btn-block">
         <span *ngIf="progressSpinner" class="spinner-border spinner-border-sm" role="status" aria-hidden="true"></span>
         Generate OTP
       </button>
       <label for="password">
         OTP <a id="idForgotPassord" class="label-link tag" routerLink="/forgotpassword" (click)="navigateToForgotPassword()">Resend OTP</a>
       </label>
-      <input type="password" [(ngModel)]="password" name="password" id="password" class="form-control form-control input-block" tabindex="2">
-      <button type="submit" (click)="login(mobileNumber)" name="commit" value="Log in" tabindex="3" class="btn btn-primary btn-block">
+      <input type="password" [(ngModel)]="verificationCode" name="password" id="password" class="form-control form-control input-block" tabindex="2">
+      <button type="submit" (click)="verifyLoginCode()" value="Log in" tabindex="3" class="btn btn-primary btn-block">
         <span *ngIf="progressSpinner" class="spinner-border spinner-border-sm" role="status" aria-hidden="true"></span>
         Submit
       </button> 
@@ -32,4 +32,8 @@
     New to Cargill?
     <a class="tag" routerLink="/register">Guest Log In</a>
   </p>
+
+
+
+  <div id="recaptcha-container"></div>
 </div>
