--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -12,7 +12,7 @@
         DSID
       </label>
       <div>
-        <input  type="text" name="login" [(ngModel)]="mobileNumber"  id="login_field" class="form-control input-block" tabindex="1" maxlength="7" autofocus="autofocus">
+        <input  type="text" name="login" [(ngModel)]="dsid"  id="login_field" class="form-control input-block" tabindex="1" maxlength="7" autofocus="autofocus">
       </div>
       <button type="submit" (click)="sendLoginCode()" name="commit" value="Log in" tabindex="3" class="btn btn-primary btn-block">
         <span *ngIf="progressSpinner" class="spinner-border spinner-border-sm" role="status" aria-hidden="true"></span>
